# LMStudioClient

./: LLMClient.py  LMStudioClient.py  README.md  __init__.py  base_client.py  base_tool.py  install.bat  lm_studio_client.py  main.py  pyproject.toml  tool_loader.py
lm_studio_client/: __init__.py  client.py  main.py  tool_loader.py
lm_studio_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lm_studio_client/tools/: WeatherTool.py  calculator_tool.py  search_tool.py
